# instorify

./: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile.3_10  Dockerfile.slim  Pipfile  Procfile  README.md  dev-file.py  docker-compose.yml  local_server.py  pyproject.toml  requirements.txt  run_test.py
app/: main.py
app/api/errors/: exceptions_handlers.py  instagram.py
app/api/routes/: api.py
app/api/routes/inst/: api.py  highlights.py  posts.py  profile.py  stories.py  users.py  utils.py
app/core/: config.py
app/models/schemas/: instagram.py
app/plugins/instagram/: highlights.py  instagram_client.py  parser.py  posts.py  profile.py  rss.py  stories.py  users.py  utils.py
app/plugins/instagram/clients/: private_api.py  utils.py  web_api.py
stories_parser/: parser.py  schemas.py
