[tool.poetry]
name = "api"
version = "0.1.0"
description = "restful api for instorify"
authors = ["MargoRSq <49024821+MargoRSq@users.noreply.github.com>"]
repository = "https://github.com/Instorify/api.git"

[tool.poetry.dependencies]
python = "^3.9.2"
instagram-private-api = "^1.6.0"
fastapi = "^0.65.2"
uvicorn = "^0.15.0"
aioredis = "1.3.1"
fastapi-cache2 = "^0.1.3"

[tool.poetry.dev-dependencies]
pep8 = "^1.7.1"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
debugpy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:start"
